--- a/src/components/TeamInfo.css
+++ b/src/components/TeamInfo.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
 
     min-height: 40vh;
+    max-height: 50vh;
 
     display: flex;
     flex-direction: column;
